k8s/environments/prod/simpleapi.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simpleapi-dev
  namespace: api
  labels:
    app: simpleapi-dev
spec:
  selector:
    matchLabels:
      app: simpleapi-dev # has to match .spec.template.metadata.labels
  revisionHistoryLimit: 1 
  #replicas: 4
  strategy:
    canary:
      stableService: simpleapi-dev-stable-service
      canaryService: simpleapi-dev-canary-service
      trafficRouting:
# #        managedRoutes:
#           #- name: version-header
#         nginx:
#           stableIngress: simpleapi-ingress # required
#        # istio:
#        #   virtualService:
#        #     name: simpleapi-vsvc   # required          
      steps:
#         # - setWeight: 20
#         # - setHeaderRoute: # enable header based traffic routing where
#         #     name: "set-header-1"
#         #     match:
#         #     - headerName: ApiVersion # Custom-Header1=Mozilla
#         #       headerValue:
#         #         exact: 2.0.0 #headerValue- contains exactly one of exact - specify the exact header value, regex - value in a regex format, prefix - the prefix of the value could be provided. Not all traffic routers will support all match types.
        - setWeight: 50
        - pause: {}
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }      
  template:
    metadata:
      labels:
        app: simpleapi-dev # has to match .spec.selector.matchLabels        
    spec:
      containers:
        - name: simpleapi
          image: niazovd/api:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-dev-canary-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-dev
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #This port should match with the port application is targetting in this case: containerPort: 8002.
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-dev-stable-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-dev
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #This port should match with the port application is targetting in this case: containerPort: 8002.
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleapi-dev-vsvc
  namespace: api
spec:
  hosts:
    - 'simpleapi.dev'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: simpleapi-dev-stable-service.api.svc.cluster.local
            port:
              number: 80
